@@ -1389,17 +1389,10 @@ can be seen by \Jabber{} clients. If a \Jabber{} client do not support
 \term{en}. In order to take effect there must be a translation file
 \term{<language>.msg} in \ejabberd{}'s \term{msgs} directory.
 
-Examples:
-\begin{itemize}
-\item To set Russian as default language:
+For example, to set Russian as default language:
 \begin{verbatim}
 {language, "ru"}.
 \end{verbatim}
-\item To set Spanish as default language:
-\begin{verbatim}
-{language, "es"}.
-\end{verbatim}
-\end{itemize}
 
 \makesection{database}{Database and LDAP Configuration}
 \ind{database}
